--- a/ui/connect.ui
+++ b/ui/connect.ui
@@ -259,6 +259,7 @@
                 <property name="xalign">0</property>
                 <property name="label" translatable="yes">H_ostname:</property>
                 <property name="use_underline">True</property>
+                <property name="mnemonic_widget">hostname</property>
               </object>
               <packing>
                 <property name="left_attach">0</property>
