--- a/ui/createnet.ui
+++ b/ui/createnet.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.15.4 on Fri Sep 27 13:35:57 2013 -->
+<!-- Generated with glade 3.16.1 -->
 <interface>
-  <!-- interface-requires gtk+ 3.0 -->
+  <requires lib="gtk+" version="3.0"/>
   <object class="GtkImage" id="image2">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
@@ -152,12 +152,12 @@
                                 <property name="width_chars">25</property>
                                 <property name="primary_icon_activatable">False</property>
                                 <property name="secondary_icon_activatable">False</property>
+                                <signal name="activate" handler="on_net_name_activate" swapped="no"/>
                                 <child internal-child="accessible">
                                   <object class="AtkObject" id="net-name-atkobject">
                                     <property name="AtkObject::accessible-name" translatable="yes">Net Name Field</property>
                                   </object>
                                 </child>
-                                <signal name="activate" handler="on_net_name_activate" swapped="no"/>
                               </object>
                               <packing>
                                 <property name="left_attach">1</property>
@@ -1251,7 +1251,7 @@
                                             <property name="xalign">1</property>
                                             <property name="label" translatable="yes">_Destination:</property>
                                             <property name="use_underline">True</property>
-                                            <property name="mnemonic_widget">net-forward-dev</property>
+                                            <property name="mnemonic_widget">net-forward</property>
                                           </object>
                                           <packing>
                                             <property name="left_attach">0</property>
@@ -1268,6 +1268,7 @@
                                             <property name="xalign">1</property>
                                             <property name="label" translatable="yes">_Mode:</property>
                                             <property name="use_underline">True</property>
+                                            <property name="mnemonic_widget">net-forward-mode</property>
                                           </object>
                                           <packing>
                                             <property name="left_attach">0</property>
