--- a/ui/createvol.ui
+++ b/ui/createvol.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.16.0 on Tue Oct  1 14:33:00 2013 -->
+<!-- Generated with glade 3.16.1 -->
 <interface>
-  <!-- interface-requires gtk+ 3.0 -->
+  <requires lib="gtk+" version="3.0"/>
   <object class="GtkAdjustment" id="adjustment1">
     <property name="upper">100000</property>
     <property name="value">1</property>
@@ -209,7 +209,7 @@
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="xalign">0</property>
-                                <property name="label" translatable="yes">_Format:</property>
+                                <property name="label" translatable="yes">F_ormat:</property>
                                 <property name="use_underline">True</property>
                                 <property name="mnemonic_widget">vol-format</property>
                               </object>
