--- a/ui/createpool.ui
+++ b/ui/createpool.ui
@@ -216,6 +216,7 @@
                             <property name="xalign">1</property>
                             <property name="label" translatable="yes">B_uild Pool:</property>
                             <property name="use_underline">True</property>
+                            <property name="mnemonic_widget">pool-build</property>
                           </object>
                           <packing>
                             <property name="left_attach">0</property>
@@ -272,6 +273,7 @@
                             <property name="xalign">1</property>
                             <property name="label" translatable="yes">_Target Path:</property>
                             <property name="use_underline">True</property>
+                            <property name="mnemonic_widget">pool-target-path</property>
                           </object>
                           <packing>
                             <property name="left_attach">0</property>
@@ -287,6 +289,7 @@
                             <property name="xalign">1</property>
                             <property name="label" translatable="yes">F_ormat:</property>
                             <property name="use_underline">True</property>
+                            <property name="mnemonic_widget">pool-format</property>
                           </object>
                           <packing>
                             <property name="left_attach">0</property>
@@ -302,6 +305,7 @@
                             <property name="xalign">1</property>
                             <property name="label" translatable="yes">Host Na_me:</property>
                             <property name="use_underline">True</property>
+                            <property name="mnemonic_widget">pool-hostname</property>
                           </object>
                           <packing>
                             <property name="left_attach">0</property>
@@ -317,6 +321,7 @@
                             <property name="xalign">1</property>
                             <property name="label" translatable="yes">sourcep:</property>
                             <property name="use_underline">True</property>
+                            <property name="mnemonic_widget">pool-source-path</property>
                           </object>
                           <packing>
                             <property name="left_attach">0</property>
@@ -463,8 +468,9 @@
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="xalign">1</property>
-                            <property name="label" translatable="yes">_Source Name:</property>
+                            <property name="label" translatable="yes">Source _Name:</property>
                             <property name="use_underline">True</property>
+                            <property name="mnemonic_widget">pool-source-name</property>
                           </object>
                           <packing>
                             <property name="left_attach">0</property>
