createinterface: make "Configure" shortcuts unique
Signed-off-by: Giuseppe Scrivano <gscrivan@redhat.com>

--- a/ui/createinterface.ui
+++ b/ui/createinterface.ui
@@ -1961,7 +1961,7 @@
                             </child>
                             <child>
                               <object class="GtkButton" id="ip-config-button">
-                                <property name="label" translatable="yes">_Configure</property>
+                                <property name="label" translatable="yes">Config_ure</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">True</property>
