--- a/ui/createinterface.ui
+++ b/ui/createinterface.ui
@@ -697,7 +697,9 @@
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="xalign">0</property>
-                        <property name="label" translatable="yes">Forward delay:</property>
+                        <property name="label" translatable="yes">Forward _delay:</property>
+                        <property name="use_underline">True</property>
+                        <property name="mnemonic_widget">bridge-delay</property>
                       </object>
                       <packing>
                         <property name="x_options">GTK_FILL</property>
@@ -709,7 +711,9 @@
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="xalign">0</property>
-                        <property name="label" translatable="yes">Enable STP:</property>
+                        <property name="label" translatable="yes">Enable _STP:</property>
+                        <property name="use_underline">True</property>
+                        <property name="mnemonic_widget">bridge-stp</property>
                       </object>
                       <packing>
                         <property name="top_attach">1</property>
