--- a/ui/preferences.ui
+++ b/ui/preferences.ui
@@ -880,6 +880,7 @@ Redirection:</property>
                             <property name="xalign">0</property>
                             <property name="label" translatable="yes">_Interface start/stop:</property>
                             <property name="use_underline">True</property>
+                            <property name="mnemonic_widget">prefs-confirm-interface</property>
                           </object>
                           <packing>
                             <property name="left_attach">0</property>
