connection: Fix Alt - t shortcut key
Or we will get:
"Couldn't find a target for a mnemonic activation"

Signed-off-by: Chen Hanxiao <chenhanxiao@cn.fujitsu.com>

--- a/ui/connect.ui
+++ b/ui/connect.ui
@@ -296,6 +296,7 @@
                 <property name="xalign">0</property>
                 <property name="label" translatable="yes">Me_thod:</property>
                 <property name="use_underline">True</property>
+                <property name="mnemonic_widget">transport</property>
               </object>
               <packing>
                 <property name="left_attach">0</property>
