preferences ui: add shortkey for tab page
Signed-off-by: Chen Hanxiao <chenhanxiao@cn.fujitsu.com>

--- a/ui/preferences.ui
+++ b/ui/preferences.ui
@@ -78,7 +78,8 @@
               <object class="GtkLabel" id="label11">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="label" translatable="yes">General</property>
+                <property name="label" translatable="yes">_General</property>
+                <property name="use_underline">True</property>
               </object>
               <packing>
                 <property name="tab_fill">False</property>
@@ -309,7 +310,8 @@
               <object class="GtkLabel" id="label2">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="label" translatable="yes">Polling</property>
+                <property name="label" translatable="yes">P_olling</property>
+                <property name="use_underline">True</property>
               </object>
               <packing>
                 <property name="position">1</property>
@@ -345,7 +347,7 @@
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="xalign">0</property>
-                                <property name="label" translatable="yes">_Graphics type:</property>
+                                <property name="label" translatable="yes">Gra_phics type:</property>
                                 <property name="use_underline">True</property>
                                 <property name="mnemonic_widget">prefs-graphics-type</property>
                               </object>
@@ -472,6 +474,7 @@ identical CPUs in order to migrate the VM.</property>
                                 <property name="xalign">0</property>
                                 <property name="label" translatable="yes">Add Spice USB
 Redirection:</property>
+                                <property name="use_underline">True</property>
                               </object>
                               <packing>
                                 <property name="left_attach">0</property>
@@ -522,7 +525,8 @@ Redirection:</property>
               <object class="GtkLabel" id="label10">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="label" translatable="yes">New VM</property>
+                <property name="label" translatable="yes">N_ew VM</property>
+                <property name="use_underline">True</property>
               </object>
               <packing>
                 <property name="position">2</property>
@@ -571,7 +575,7 @@ Redirection:</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="xalign">0</property>
-                                <property name="label" translatable="yes">_Grab keys:</property>
+                                <property name="label" translatable="yes">Gr_ab keys:</property>
                                 <property name="use_underline">True</property>
                                 <property name="mnemonic_widget">prefs-keys-grab-changebtn</property>
                               </object>
@@ -719,7 +723,8 @@ Redirection:</property>
               <object class="GtkLabel" id="label3">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="label" translatable="yes">Console</property>
+                <property name="label" translatable="yes">Conso_le</property>
+                <property name="use_underline">True</property>
               </object>
               <packing>
                 <property name="position">3</property>
@@ -990,7 +995,8 @@ Redirection:</property>
               <object class="GtkLabel" id="label18">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="label" translatable="yes">Feedback</property>
+                <property name="label" translatable="yes">Feed_back</property>
+                <property name="use_underline">True</property>
               </object>
               <packing>
                 <property name="position">4</property>
