use binary prefixes for units where appropriate
https://bugzilla.redhat.com/show_bug.cgi?id=1103893

Signed-off-by: Chen Hanxiao <chenhanxiao@cn.fujitsu.com>

--- a/ui/addstorage.ui
+++ b/ui/addstorage.ui
@@ -78,7 +78,7 @@
                       <object class="GtkLabel" id="label1">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="label" translatable="yes">_GB</property>
+                        <property name="label" translatable="yes">_GiB</property>
                         <property name="use_underline">True</property>
                       </object>
                       <packing>
