--- a/ui/create.ui
+++ b/ui/create.ui
@@ -1931,7 +1931,7 @@ is not yet supported.&lt;/small&gt;</property>
                                             <property name="visible">True</property>
                                             <property name="can_focus">False</property>
                                             <property name="xalign">0</property>
-                                            <property name="label" translatable="yes">MB</property>
+                                            <property name="label" translatable="yes">MiB</property>
                                           </object>
                                           <packing>
                                             <property name="left_attach">2</property>
