--- a/ui/createvol.ui
+++ b/ui/createvol.ui
@@ -357,7 +357,7 @@
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
                                     <property name="xalign">0</property>
-                                    <property name="label" translatable="yes">GB</property>
+                                    <property name="label" translatable="yes">GiB</property>
                                   </object>
                                   <packing>
                                     <property name="left_attach">2</property>
@@ -371,7 +371,7 @@
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
                                     <property name="xalign">0</property>
-                                    <property name="label" translatable="yes">GB</property>
+                                    <property name="label" translatable="yes">GiB</property>
                                   </object>
                                   <packing>
                                     <property name="left_attach">2</property>
