--- a/ui/details.ui
+++ b/ui/details.ui
@@ -1736,7 +1736,7 @@ if you know what you are doing.&lt;/small&gt;</property>
                                                 <property name="visible">True</property>
                                                 <property name="can_focus">False</property>
                                                 <property name="xalign">1</property>
-                                                <property name="label">30 MB of 128 MB</property>
+                                                <property name="label">30 MiB of 128 MiB</property>
                                               </object>
                                               <packing>
                                                 <property name="expand">False</property>
@@ -1800,7 +1800,7 @@ if you know what you are doing.&lt;/small&gt;</property>
                                                 <property name="visible">True</property>
                                                 <property name="can_focus">False</property>
                                                 <property name="xalign">1</property>
-                                                <property name="label" translatable="yes">0 KBytes/s 0 KBytes/s</property>
+                                                <property name="label" translatable="yes">0 KiBytes/s 0 KiBytes/s</property>
                                                 <property name="use_markup">True</property>
                                               </object>
                                               <packing>
@@ -1865,7 +1865,7 @@ if you know what you are doing.&lt;/small&gt;</property>
                                                 <property name="visible">True</property>
                                                 <property name="can_focus">False</property>
                                                 <property name="xalign">1</property>
-                                                <property name="label">0 KBytes/s 0 KBytes/s</property>
+                                                <property name="label">0 KiBytes/s 0 KiBytes/s</property>
                                                 <property name="use_markup">True</property>
                                               </object>
                                               <packing>
@@ -2641,7 +2641,7 @@ if you know what you are doing.&lt;/small&gt;</property>
                                             <property name="visible">True</property>
                                             <property name="can_focus">False</property>
                                             <property name="xalign">0</property>
-                                            <property name="label">2 GB</property>
+                                            <property name="label">2 GiB</property>
                                             <property name="selectable">True</property>
                                           </object>
                                           <packing>
@@ -2683,7 +2683,7 @@ if you know what you are doing.&lt;/small&gt;</property>
                                                 <property name="visible">True</property>
                                                 <property name="can_focus">False</property>
                                                 <property name="xalign">0</property>
-                                                <property name="label" translatable="yes">MB</property>
+                                                <property name="label" translatable="yes">MiB</property>
                                               </object>
                                               <packing>
                                                 <property name="expand">True</property>
@@ -2732,7 +2732,7 @@ if you know what you are doing.&lt;/small&gt;</property>
                                                 <property name="visible">True</property>
                                                 <property name="can_focus">False</property>
                                                 <property name="xalign">0</property>
-                                                <property name="label" translatable="yes">MB</property>
+                                                <property name="label" translatable="yes">MiB</property>
                                               </object>
                                               <packing>
                                                 <property name="expand">True</property>
@@ -3958,7 +3958,7 @@ if you know what you are doing.&lt;/small&gt;</property>
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
                                                             <property name="xalign">0</property>
-                                                            <property name="label" translatable="yes">KBytes/Sec</property>
+                                                            <property name="label" translatable="yes">KiBytes/Sec</property>
                                                             <property name="use_underline">True</property>
                                                             <property name="max_width_chars">20</property>
                                                           </object>
