--- a/ui/fsdetails.ui
+++ b/ui/fsdetails.ui
@@ -385,7 +385,7 @@
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="xalign">0</property>
-            <property name="label" translatable="yes">MB</property>
+            <property name="label" translatable="yes">MiB</property>
           </object>
           <packing>
             <property name="expand">False</property>
