--- a/ui/host.ui
+++ b/ui/host.ui
@@ -255,7 +255,7 @@
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
                                     <property name="xalign">0</property>
-                                    <property name="label">2000 MB</property>
+                                    <property name="label">2000 MiB</property>
                                   </object>
                                   <packing>
                                     <property name="left_attach">1</property>
