--- a/ui/migrate.ui
+++ b/ui/migrate.ui
@@ -454,7 +454,7 @@
                                                 <property name="visible">True</property>
                                                 <property name="can_focus">False</property>
                                                 <property name="xalign">0</property>
-                                                <property name="label" translatable="yes">MB/s</property>
+                                                <property name="label" translatable="yes">MiB/s</property>
                                               </object>
                                               <packing>
                                                 <property name="expand">True</property>
