preferences ui: add shortkey for Add Spice USB Redirection
Signed-off-by: Chen Hanxiao <chenhanxiao@cn.fujitsu.com>

--- a/ui/preferences.ui
+++ b/ui/preferences.ui
@@ -427,6 +427,7 @@
                                 <property name="xalign">0</property>
                                 <property name="label" translatable="yes">_Add sound device:</property>
                                 <property name="use_underline">True</property>
+                                <property name="mnemonic_widget">prefs-new-vm-sound</property>
                               </object>
                               <packing>
                                 <property name="left_attach">0</property>
@@ -472,9 +473,10 @@ identical CPUs in order to migrate the VM.</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="xalign">0</property>
-                                <property name="label" translatable="yes">Add Spice USB
+                                <property name="label" translatable="yes">Add Spice _USB
 Redirection:</property>
                                 <property name="use_underline">True</property>
+                                <property name="mnemonic_widget">prefs-add-spice-usbredir</property>
                               </object>
                               <packing>
                                 <property name="left_attach">0</property>
