--- a/ui/host.ui
+++ b/ui/host.ui
@@ -479,7 +479,7 @@
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
                                     <property name="xalign">1</property>
-                                    <property name="label">1.59 GB of 2.2 GB</property>
+                                    <property name="label">1.59 GiB of 2.2 GiB</property>
                                   </object>
                                   <packing>
                                     <property name="expand">False</property>
@@ -1397,7 +1397,7 @@
                                         <property name="visible">True</property>
                                         <property name="can_focus">False</property>
                                         <property name="xalign">0</property>
-                                        <property name="label">&lt;span size="large"&gt;1234 GB Free&lt;/span&gt; / &lt;i&gt;6000 GB In Use&lt;/i&gt;</property>
+                                        <property name="label">&lt;span size="large"&gt;1234 GiB Free&lt;/span&gt; / &lt;i&gt;6000 GiB In Use&lt;/i&gt;</property>
                                         <property name="use_markup">True</property>
                                       </object>
                                       <packing>
