preferences ui: fix a duplicate shortkey
Signed-off-by: Chen Hanxiao <chenhanxiao@cn.fujitsu.com>

--- a/ui/preferences.ui
+++ b/ui/preferences.ui
@@ -444,7 +444,7 @@
 and migration compatibility: if using the 'copy host' option, your servers will need
 identical CPUs in order to migrate the VM.</property>
                                 <property name="xalign">0</property>
-                                <property name="label" translatable="yes">_CPU default:</property>
+                                <property name="label" translatable="yes">CPU _default:</property>
                                 <property name="use_underline">True</property>
                                 <property name="mnemonic_widget">prefs-cpu-default</property>
                               </object>
